# Smart-Youtube-Upgrade

./: .dockerignore  .env.example  .eslintrc.json  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_PLAN_V4.md  LICENSE  PRIVACY_POLICY.md  PROJECT_MASTER_PLAN_V3.md  PROJECT_STATUS_V3.md  PROJECT_STATUS_V4.md  README.md  SCALING.md  SECURITY.md  START.ps1  build.js  docker-compose.yml  package-lock.json  package.json  pre-commit-hook.sh  vitest.config.js
.github/workflows/: ci.yml
backend/: ai_reviewer.py  alternatives_finder.py  analyzer.py  main.py  pyproject.toml  quick_test.py  requirements.txt  safety_db.py  test_analyzer.py  test_metadata.py  test_video.py  vision_analyzer.py  youtube_data.py
backend/safety-db/alternatives/: animal_channels.json  animal_keywords.json  fallback_entertainment.json  fallback_real_animals.json  fallback_tutorials.json  real_animal_searches.json  safe_search_mappings.json  trusted_channels.json
backend/tests/: conftest.py  test_ai_reviewer.py  test_alternatives_finder.py  test_analyzer.py  test_edge_cases.py  test_integration.py  test_safety_db.py  test_security_s1.py  test_youtube_data.py
extension/: manifest.json  manifest.prod.json
extension/__tests__/: helpers.js
extension/background/: background.js
extension/content/: analysis.js  bridge.js  content.css  content.js  embed.html  modes.js  overlay.js  sidebar.css  sidebar.js  utils.js
extension/icons/: README.md  create_icons.py  generate_icons.py
extension/popup/: popup.css  (+2 more)
safety-db/: categories.json
store/: listing.md  privacy-policy.md
(+20 files in other folders)
