[project]
name = "youtube-safety-inspector"
version = "2.1.0"
description = "Backend API for the YouTube Safety Inspector Chrome extension"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "beautifulplanet"}
]

dependencies = [
    "fastapi==0.116.1",
    "uvicorn==0.40.0",
    "pydantic==2.11.7",
    "youtube-transcript-api==1.2.3",
    "httpx==0.28.1",
    "google-api-python-client==2.182.0",
    "python-dotenv==1.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
]
ai = [
    "openai==1.12.0",
    "anthropic==0.18.0",
]
db = [
    "sqlalchemy==2.0.25",
    "aiosqlite==0.19.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov --cov-report=term-missing"

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    "quick_test.py",
    "test_*.py",
    "debug_*.py",
    "vision_analyzer.py",
]

[tool.coverage.report]
show_missing = true
fail_under = 50
exclude_lines = [
    "if __name__",
    "pragma: no cover",
]
